--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = retail-b2c-buyerapp
 	url = https://github.com/shaijujohn1974/retail-b2c-buyerapp.git
 	branch = main
+[submodule "retail-b2c-sellerapp"]
+	path = retail-b2c-sellerapp
+	url = https://github.com/shaijujohn1974/retail-b2c-sellerapp.git
+	branch = main
