--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = retail-b2c-apispec
 	url = https://github.com/shaijujohn1974/retail-b2c-apispec.git
 	branch = main
+[submodule "retail-b2c-developerguide"]
+	path = retail-b2c-developerguide
+	url = https://github.com/shaijujohn1974/retail-b2c-developerguide.git
+	branch = main
